# rust-jni-glue

./: .gitignore  Cargo.toml  Counter.java  Person.java  README.md  build.rs  rustfmt.toml
ByteBuddyWrap/: Cargo.toml  lib.rs
ByteBuddyWrap/dynamic/: mod.rs
ByteBuddyWrap/implementation/: mod.rs
CounterWrap/: Cargo.toml
CounterWrap/src/: lib.rs
JNIWrap/: Cargo.toml  JNI.rs  JNIWrap.rs  build.rs
JavaWrap/: Cargo.toml  lib.rs
JavaWrap/java/: Main.java
PersonWrap/: Cargo.toml  build.rs
PersonWrap/java/: Person.java
PersonWrap/src/: lib.rs
jnimacro/: Cargo.toml  lib.rs
src/: ClassWrap.rs  JNIWrap.rs  lib.rs  macros.rs  main.rs
