[package]
name = "rust-jni-glue"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["jnimacro","JNIWrap","PersonWrap", "CounterWrap", "JavaWrap"]
[dependencies]
PersonWrap = { path = "PersonWrap" }
JNIWrap = { path = "JNIWrap" }
CounterWrap = { path = "CounterWrap" }

JavaWrap = { path = "JavaWrap" }
jnimacro = { path = "jnimacro" }
